--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="World.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Plane.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ShadeRec.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Plane.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
