--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BBox.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="GeometricObject.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Ray.h" />
@@ -155,6 +157,8 @@
     <ClInclude Include="World.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BBox.cpp" />
+    <ClCompile Include="GeometricObject.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="ShadeRec.cpp" />
