--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="SingleSphere.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="MultipleObjects.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -81,6 +84,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MultipleObjects.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
