--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -150,9 +150,13 @@
     <ClInclude Include="BBox.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GeometricObject.h" />
+    <ClInclude Include="Jittered.h" />
+    <ClInclude Include="Maths.h" />
     <ClInclude Include="MultipleObjects.h" />
+    <ClInclude Include="NRooks.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Ray.h" />
+    <ClInclude Include="Sampler.h" />
     <ClInclude Include="ShadeRec.h" />
     <ClInclude Include="SingleSphere.h" />
     <ClInclude Include="Sphere.h" />
@@ -163,10 +167,14 @@
   <ItemGroup>
     <ClCompile Include="BBox.cpp" />
     <ClCompile Include="GeometricObject.cpp" />
+    <ClCompile Include="Jittered.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Maths.cpp" />
     <ClCompile Include="MultipleObjects.cpp" />
+    <ClCompile Include="NRooks.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="Sampler.cpp" />
     <ClCompile Include="ShadeRec.cpp" />
     <ClCompile Include="SingleSphere.cpp" />
     <ClCompile Include="Sphere.cpp" />
