--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="GeometricObject.h" />
+    <ClInclude Include="GlossySpecular.h" />
     <ClInclude Include="Jittered.h" />
     <ClInclude Include="Lambertian.h" />
     <ClInclude Include="Light.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Matte.h" />
     <ClInclude Include="MultipleObjects.h" />
     <ClInclude Include="NRooks.h" />
+    <ClInclude Include="Phong.h" />
     <ClInclude Include="Pinhole.h" />
     <ClInclude Include="Plane.h" />
     <ClInclude Include="PointLight.h" />
@@ -180,6 +182,7 @@
     <ClCompile Include="BRDF.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="GeometricObject.cpp" />
+    <ClCompile Include="GlossySpecular.cpp" />
     <ClCompile Include="Jittered.cpp" />
     <ClCompile Include="Lambertian.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -189,6 +192,7 @@
     <ClCompile Include="Matte.cpp" />
     <ClCompile Include="MultipleObjects.cpp" />
     <ClCompile Include="NRooks.cpp" />
+    <ClCompile Include="Phong.cpp" />
     <ClCompile Include="Pinhole.cpp" />
     <ClCompile Include="Plane.cpp" />
     <ClCompile Include="PointLight.cpp" />
