--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -111,6 +111,9 @@
     <ClInclude Include="Mesh.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="AreaLight.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -207,6 +210,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Emissive.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="AreaLight.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
