--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -123,6 +123,12 @@
     <ClInclude Include="Compound.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Grid.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshTriangle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -231,6 +237,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Compound.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshTriangle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
