--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -160,6 +160,7 @@
     <ClInclude Include="Emissive.h" />
     <ClInclude Include="GeometricObject.h" />
     <ClInclude Include="GlossySpecular.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="Jittered.h" />
     <ClInclude Include="Lambertian.h" />
     <ClInclude Include="Light.h" />
@@ -167,6 +168,7 @@
     <ClInclude Include="Maths.h" />
     <ClInclude Include="Matte.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshTriangle.h" />
     <ClInclude Include="MultipleObjects.h" />
     <ClInclude Include="NRooks.h" />
     <ClInclude Include="Phong.h" />
@@ -197,6 +199,7 @@
     <ClCompile Include="Emissive.cpp" />
     <ClCompile Include="GeometricObject.cpp" />
     <ClCompile Include="GlossySpecular.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Jittered.cpp" />
     <ClCompile Include="Lambertian.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -205,6 +208,7 @@
     <ClCompile Include="Maths.cpp" />
     <ClCompile Include="Matte.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="MeshTriangle.cpp" />
     <ClCompile Include="MultipleObjects.cpp" />
     <ClCompile Include="NRooks.cpp" />
     <ClCompile Include="Phong.cpp" />
