--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="MeshTriangle.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="FlatMeshTriangle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -243,6 +246,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MeshTriangle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FlatMeshTriangle.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
