--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -135,6 +135,12 @@
     <ClInclude Include="PathTrace.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="PerfectSpecular.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Reflective.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -255,6 +261,12 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="PathTrace.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="PerfectSpecular.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Reflective.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
