--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -141,6 +141,9 @@
     <ClInclude Include="Reflective.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Whitted.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -267,6 +270,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Reflective.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Whitted.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
