--- a/RayTracing/RayTracing.vcxproj
+++ b/RayTracing/RayTracing.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="BRDF.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Compound.h" />
+    <ClInclude Include="ConcaveSphere.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Directional.h" />
     <ClInclude Include="Emissive.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="BRDF.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Compound.cpp" />
+    <ClCompile Include="ConcaveSphere.cpp" />
     <ClCompile Include="Directional.cpp" />
     <ClCompile Include="Emissive.cpp" />
     <ClCompile Include="FlatMeshTriangle.cpp" />
