--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="Whitted.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ConcaveSphere.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -273,6 +276,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Whitted.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ConcaveSphere.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
