--- a/RayTracing/RayTracing.vcxproj.filters
+++ b/RayTracing/RayTracing.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="Transparent.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GlossyReflector.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ray.cpp">
@@ -297,6 +300,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Transparent.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GlossyReflectorcpp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
